# game-dev

./: .clang-format  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/gl/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  gl_err.cpp  gl_err.h  gl_loader.cpp  gl_loader.h  glfw_app.cpp  glfw_app.h  key_state.h  keyboard_input_handler.cpp  keyboard_input_handler.h  keyboard_keys.h  main.cpp  mouse_input.h  mouse_input_handler.cpp  mouse_input_handler.h  shader_util.cpp  shader_util.h  transform.h  window.cpp  window.h
apps/raytracing/: CMakeLists.txt  camera.cpp  camera.h  image.cpp  image.h  material.h  optics.cpp  optics.h  ppm.cpp  ppm.h  random.h  raytracing.cpp  scene.cpp  scene.h  shape.h  sphere.cpp  sphere.h
apps/raytracing/materials/: dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
infra/: CMakeLists.txt  filepath.cpp  filepath.h  fmt.cpp  fmt.h  fmt_test.cpp
math/: CMakeLists.txt  constants.h  mat_base.h  mat_test_helper.h  matrix.h  matrix_test.cpp  quat_mat.h  quaternion.h  ray.h  test_helper.cpp  test_helper.h  trans_mat.h  trans_mat_test.cpp  vec_base.h  vector.h
